--- a/aboutus.html
+++ b/aboutus.html
@@ -239,8 +239,9 @@
                             <p>
                                 <ul class="list-unstyled text-center">
                                     <li>Ashna Bahl</li>
+                                    <li>Anand Iyer</li>
                                     <li>Rakshika Singh Rana</li>
-                                    <li>Siddharth Kumar</li>
+                                    <li>Siddharth Kumar Choudhary</li>
                                 </ul>
                             </p>
                         </div>
