--- a/courses/german.html
+++ b/courses/german.html
@@ -194,7 +194,7 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Learn German from basics.</h2>
-                    <h6><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente id, debitis odio rem repellendus eum ipsa quis reprehenderit libero saepe quaerat doloremque suscipit laudantium similique minima quasi praesentium possimus temporibus?</p></h6>
+                    <h6><p>Learn German live from our online course. Learn basic German conversations, vocabulary and grammar. Learn German as your next foreign language! </p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/germanLogo.jpg">
