--- a/courses/french.html
+++ b/courses/french.html
@@ -208,7 +208,7 @@
       <h2>This course goes live in...</h2>
       <h3><span id="days"></span><span id="hours"></span><span id="mins"></span><span id="secs"></span></h3>
     </div>
-    <hr class="my-4 divider">
+   <!-- <hr class="my-4 divider">
     <div class="container">
         <div class="row">
             <div class="col-md-3 d-none d-md-block course-stats">
@@ -221,7 +221,7 @@
             </div>
         </div>
     </div>
-  </div>
+  </div> -->
   
 
   <div class="bottom-container">
