--- a/courses/french.html
+++ b/courses/french.html
@@ -205,7 +205,8 @@
         </div>
     </div>
     <div class="timer text-center">
-      <h2>This course goes live in...</h2>
+      <h2>We are Launching Soon!</h2>
+      <h6>Your favourite french course is under construction it will go live soon </h6>
       <h3><span id="days"></span><span id="hours"></span><span id="mins"></span><span id="secs"></span></h3>
     </div>
    <!-- <hr class="my-4 divider">
