--- a/courses/french.html
+++ b/courses/french.html
@@ -209,7 +209,7 @@
       <h6>Your favourite french course is under construction it will go live soon </h6>
       <h3><span id="days"></span><span id="hours"></span><span id="mins"></span><span id="secs"></span></h3>
     </div>
-   <!-- <hr class="my-4 divider">
+    <hr class="my-4 divider">
     <div class="container">
         <div class="row">
             <div class="col-md-3 d-none d-md-block course-stats">
@@ -222,7 +222,7 @@
             </div>
         </div>
     </div>
-  </div> -->
+  </div> 
   
 
   <div class="bottom-container">
