--- a/courses/dm.html
+++ b/courses/dm.html
@@ -195,7 +195,7 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Enhance your skills in Digital Marketing.</h2>
-                    <h6><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente id, debitis odio rem repellendus eum ipsa quis reprehenderit libero saepe quaerat doloremque suscipit laudantium similique minima quasi praesentium possimus temporibus?</p></h6>
+                    <h6><p>Learn marketing in Digital world live from our online course. It is designed to have depth understanding of the online opportunity, plan digital marketing strategy and gain insights of the online ecosystem</p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/dmLogo.jpg">
