--- a/courses/python.html
+++ b/courses/python.html
@@ -194,7 +194,7 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Let's start coding in Python</h2>
-                    <h6><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente id, debitis odio rem repellendus eum ipsa quis reprehenderit libero saepe quaerat doloremque suscipit laudantium similique minima quasi praesentium possimus temporibus?</p></h6>
+                    <h6><p>Learn python programming live from online course.It's designed for beginners to advance courses.The proper python certification is a gateway of lucrative career. So Enroll Now!</p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/pythonLogo.png">
