--- a/courses/python.html
+++ b/courses/python.html
@@ -94,7 +94,7 @@
             </div>
           </div>
         <a class="nav-item nav-link nav-pills" href="../aboutus.html">About Us</a>
-        <a class="nav-item nav-link nav-pills" href="#">Contact</a>
+        <a class="nav-item nav-link nav-pills" href="#">Contact Us</a>
       </div>
     </div>
   </nav>
