--- a/courses/python.html
+++ b/courses/python.html
@@ -61,7 +61,6 @@
               <div class="menu">
                 <a class="courses item" href="iot.html">Internet of Things</a>
                 <a class="courses item" href="robotics.html">Robotics</a>
-                <a class="courses item" href="drone.html">Drone Making</a>
               </div>
             </div>
             <div class="item">
@@ -194,7 +193,7 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Let's start coding in Python</h2>
-                    <h6><p>Learn python programming live from our online course. It's designed for beginners to advance courses. The proper python certification is a gateway of a lucrative career. So Enroll Now!</p></h6>
+                    <h6><p>Learn python programming live from our online course. It's designed for beginners to make them professional programmers. The proper python certification is a gateway of a lucrative career. So Enroll Now!</p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/pythonLogo.png">
