--- a/courses/c++.html
+++ b/courses/c++.html
@@ -50,7 +50,6 @@
                 <a class="courses item" href="web.html">Web Development</a>
                 <a class="courses item" href="app.html">App Development</a>
                 <a class="courses item" href="ios.html">iOS Development</a>
-                <a class="courses item" href="c.html">C</a>
                 <a class="item courses" href="c++.html">C++</a>
                 <a class="item courses" href="java.html">Java</a>
                 <a class="courses item" href="python.html">Python</a>
@@ -61,7 +60,6 @@
               <div class="menu">
                 <a class="courses item" href="iot.html">Internet of Things</a>
                 <a class="courses item" href="robotics.html">Robotics</a>
-                <a class="courses item" href="drone.html">Drone Making</a>
               </div>
             </div>
             <div class="item">
@@ -194,7 +192,7 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Let's start coding in C++</h2>
-                    <h6><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente id, debitis odio rem repellendus eum ipsa quis reprehenderit libero saepe quaerat doloremque suscipit laudantium similique minima quasi praesentium possimus temporibus?</p></h6>
+                    <h6><p>Learn C++ programming live from our online course. It's designed for beginners to make them professional programmers. The proper C++ certification is a gateway of a lucrative career. So Enroll Now!</p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/c++Logo.png">
