--- a/courses/app.html
+++ b/courses/app.html
@@ -51,7 +51,6 @@
                 <a class="courses item" href="web.html">Web Development</a>
                 <a class="courses item" href="app.html">App Development</a>
                 <a class="courses item" href="ios.html">iOS Development</a>
-                <a class="courses item" href="c.html">C</a>
                 <a class="item courses" href="c++.html">C++</a>
                 <a class="item courses" href="java.html">Java</a>
                 <a class="courses item" href="python.html">Python</a>
@@ -62,7 +61,6 @@
               <div class="menu">
                 <a class="courses item" href="iot.html">Internet of Things</a>
                 <a class="courses item" href="robotics.html">Robotics</a>
-                <a class="courses item" href="drone.html">Drone Making</a>
               </div>
             </div>
             <div class="item">
@@ -196,7 +194,7 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Android App-Development for Beginners</h2>
-                    <h6><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente id, debitis odio rem repellendus eum ipsa quis reprehenderit libero saepe quaerat doloremque suscipit laudantium similique minima quasi praesentium possimus temporibus?</p></h6>
+                    <h6><p>Learn the art of creating Android Apps. live from our online course. Get the training you need, build a Github profile and learn a skill which is in high-demand in 21st century!</p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/appLogo.jpg">
