--- a/courses/spanish.html
+++ b/courses/spanish.html
@@ -193,7 +193,7 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Learn Spanish from basics.</h2>
-                    <h6><p>Learn Spanish live from our online course. Learn basic spanish conversations, grammar, vocabulary and much more. It can be that one skill on your resume that sets you apart from your competition!</p></h6>
+                    <h6><p>Learn Spanish live from our online course. Learn basic spanish conversations skills, grammar, vocabulary and much more. It could be that one skill on your resume that sets you apart from your competitors!</p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/spanishLogo.jpg">
