--- a/courses/french.html
+++ b/courses/french.html
@@ -194,7 +194,7 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Learn French from basics.</h2>
-                    <h6><p>Learn french live from our online course. Learn basic french conversations, vocabulary, grammar and much more. You will also learn about french culture and their literature. It's fun and super easy to follow!</p></h6>
+                    <h6><p>Learn french live from our online course. Learn basic french conversations skills, vocabulary, grammar and much more. You will also learn about french culture and their literature. It's fun and super easy to follow!</p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/frenchlogo.png">
