--- a/courses/german.html
+++ b/courses/german.html
@@ -192,7 +192,7 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Learn German from basics.</h2>
-                    <h6><p>Learn German live from our online course. Learn basic German conversations skills, vocabulary and grammar and learn it as your next foreign language! </p></h6>
+                    <h6><p>Learn German live from our online course. Learn basic German conversations skills, vocabulary and grammar. Get well versed with the intricacies of German as you make it your next foreign language! </p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/germanLogo.jpg">
