Added Our Team Section

--- a/aboutus.html
+++ b/aboutus.html
@@ -203,89 +203,145 @@
             </div>
         </div>
     </div>
+    
     <hr class = "my-4">
-    <div class="container">
+    <div class="container" >
+      <h3 class="text-center">Our Team</h3>
+      <hr class="my-4">
         <div class="row">
-            <div class="col-sm-8 col-12">
-                <div class="page-header">
-                    <h1 class="text-center">Our Team</h1>
-                </div>
-                <div class="team">
-                    <div class="row">
-                        <div class="col-6">
-                            <img class="rounded-circle img-fluid float-right" src="Assets/Images/0.jpg" width="100">
-                        </div>
-                        <div class="col-6 my-auto">
-                            <div>
-                                <h4>Simant Keshari</h4>
-                                <h6><p>Founder & CEO</p></h6>
-                                <a href="https://www.instagram.com/simant_keshari/"><i class="fa-fw fab fa-instagram fa-lg"></i></a>
-                                <a href="https://www.linkedin.com/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6">
-                            <h5 class="text-center">Design</h5>
-                            <p>
-                                <ul class="list-unstyled text-center">
-                                    <li>Payel Paul</li>
-                                    <li>Tirth Kalaria</li>
-                                    <li>Varun Vaibhav Jha</li>
-                                </ul>
-                            </p>
-                        </div>
-                        <div class="col-6">
-                            <h5 class="text-center">Tech</h5>
-                            <p>
-                                <ul class="list-unstyled text-center">
-                                    <li>Anurag Singh</li>
-                                    <li>Arnab Deep</li>
-                                    <li>Saqib Rehman</li>
-                                    
-                                </ul>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6">
-                            <h5 class="text-center">Sales & Management</h5>
-                            <p>
-                                <ul class="list-unstyled text-center">
-                                    <li>K. Suyash Prateek</li>
-                                    <li>Harsh</li>
-                                    <li>Arkaprava Chakraborty</li>
-                                    <li>Umang Khaitan</li>
-                                </ul>
-                            </p>
-                        </div>
-                        <div class="col-6">
-                            <h5 class="text-center">Content</h5>
-                            <p>
-                                <ul class="list-unstyled text-center">
-                                    <li>Ashna Bahl</li>
-                                    <li>Anand Iyer</li>
-                                    <li>Rakshika Singh Rana</li>
-                                  <li>Siddharth Kumar Choudhary</li>
-                                </ul>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+          <div class="col-sm-4 col-12">
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/simant.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Simant Keshari</h4>
+                <h6>Founder & CEO</h6>
+              </div>
             </div>
-            <div class="col-sm-4 col-12">
-                <div class="page-header">
-                    <h1 class="text-center">Our Goals</h1>
-                </div>
-                <div class="goals">
-                    <ul class="list-unstyled">
-                        <li><p>Point 1</p></li>
-                        <li><p>Point 1</p></li>
-                        <li><p>Point 1</p></li>
-                        <li><p>Point 1</p></li>
-                    </ul>
-                </div>
-            </div> 
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/prateek.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>K. Suyash Prateek</h4>
+                <h6>S&M Team</h6>
+              </div>
+            </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/harsh.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Harsh</h4>
+                <h6>S&M Team</h6>
+              </div>
+            </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/umang.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Umang Khaitan</h4>
+                <h6>S&M Team</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 col-12">
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/payel.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Payel Paul</h4>
+                <h6>Design Head</h6>
+              </div>
+            </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/varun.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Varun Vaibhav Jha</h4>
+                <h6>Design Team</h6>
+              </div>
+            </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/tirth.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Tirth Kalaria</h4>
+                <h6>Design Team</h6>
+              </div>
+            </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/arnabjpg.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Arnab Deep</h4>
+                <h6>Tech Head</h6>
+              </div>
+            </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/anurag.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Anurag Singh</h4>
+                <h6>Tech Team</h6>
+              </div>
+            </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/saqib.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Saqib Rehman</h4>
+                <h6>Tech Team</h6>
+              </div>
+            </div>
+          </div>
+          <!-- Row 3-->
+          <div class="col-sm-4 col-12">
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/anvesha.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Anvesha Shukla</h4>
+                <h6>Content Head</h6>
+              </div>
+            </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/ashna.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Aashna Bahl</h4>
+                <h6>Content Team</h6>
+              </div>
+            </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/sid.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Siddharth Kumar Choudhary</h4>
+                <h6>Content Team</h6>
+              </div>
+            </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/anand.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Anand Iyer</h4>
+                <h6>Content Team</h6>
+              </div>
+            </div>
+          </div>
         </div>
     </div>
 
@@ -296,7 +352,7 @@
               <div class="social text-center">
                 <a class="footer-link" href="https://www.facebook.com/learnyuva"><i class="fa-fw fab fa-facebook fa-lg"></i></a>
                 <a class="footer-link" href="https://www.instagram.com/learnyuva"><i class="fa-fw fab fa-instagram fa-lg"></i></a>
-                <a class="footer-link" href="https://www.linkedin.com/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
+                <a class="footer-link" href="https://www.linkedin.com/company/learnyuva/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
                 <a class="footer-link" href="mailto:contact.learnyuva@gmail.com"><i class="fa-fw fas fa-envelope fa-lg"></i></a>
                 <a class="footer-link" href=""><i class="fa-fw fas fa-comment-alt fa-lg"></i></a>
               </div>
