--- a/courses/ios.html
+++ b/courses/ios.html
@@ -225,7 +225,7 @@
           <div class="social text-center">
             <a class="footer-link" href="https://www.facebook.com/learnyuva"><i class="fa-fw fab fa-facebook fa-lg"></i></a>
             <a class="footer-link" href="https://www.instagram.com/learnyuva"><i class="fa-fw fab fa-instagram fa-lg"></i></a>
-            <a class="footer-link" href="https://www.linkedin.com/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
+            <a class="footer-link" href="https://www.linkedin.com/company/learnyuva/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
             <a class="footer-link" href="mailto:contact.learnyuva@gmail.com"><i class="fa-fw fas fa-envelope fa-lg"></i></a>
             <a class="footer-link" href=""><i class="fa-fw fas fa-comment-alt fa-lg"></i></a>
           </div>
