--- a/aboutus.html
+++ b/aboutus.html
@@ -319,7 +319,7 @@
                 <img class="rounded-circle img-fluid" src="Assets/profiles/ashna.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>Aashna Bahl</h4>
+                <h4>Ashna Bahl</h4>
                 <h6>Content Team</h6>
               </div>
             </div>
