--- a/aboutus.html
+++ b/aboutus.html
@@ -250,20 +250,20 @@
           <div class="col-sm-4 col-12">
             <div class="row member">
               <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/varun.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Varun Vaibhav Jha</h4>
+                <h6>Chief Product Officer</h6>
+              </div>
+            </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
                 <img class="rounded-circle img-fluid" src="Assets/profiles/payel.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
                 <h4>Payel Paul</h4>
                 <h6>Design Head</h6>
-              </div>
-            </div>
-            <div class="row member">
-              <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/varun.jpg">
-              </div>
-              <div class="col-sm-8 col-12 m-auto">
-                <h4>Varun Vaibhav Jha</h4>
-                <h6>Design Team</h6>
               </div>
             </div>
             <div class="row member">
@@ -298,7 +298,7 @@
                 <img class="rounded-circle img-fluid" src="Assets/profiles/saqib.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>Saqib Rehman</h4>
+                <h4>Saqib Rahman</h4>
                 <h6>Tech Team</h6>
               </div>
             </div>
