--- a/aboutus.html
+++ b/aboutus.html
@@ -221,29 +221,29 @@
             </div>
             <div class="row member">
               <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/prateek.jpg">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/anvesha.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>K. Suyash Prateek</h4>
-                <h6>S&M Team</h6>
+                <h4>Anvesha Shukla</h4>
+                <h6>Content Head</h6>
               </div>
             </div>
             <div class="row member">
               <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/harsh.jpg">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/ashna.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>Harsh</h4>
-                <h6>S&M Team</h6>
+                <h4>Ashna Bahl</h4>
+                <h6>Content Team</h6>
               </div>
             </div>
             <div class="row member">
               <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/umang.jpg">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/anand.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>Umang Khaitan</h4>
-                <h6>S&M Team</h6>
+                <h4>Anand Iyer</h4>
+                <h6>Content Team</h6>
               </div>
             </div>
           </div>
@@ -307,37 +307,37 @@
           <div class="col-sm-4 col-12">
             <div class="row member">
               <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/anvesha.jpg">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/prateek.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>Anvesha Shukla</h4>
-                <h6>Content Head</h6>
+                <h4>K. Suyash Prateek</h4>
+                <h6>S&M Team</h6>
               </div>
             </div>
             <div class="row member">
               <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/ashna.jpg">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/harsh.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>Ashna Bahl</h4>
-                <h6>Content Team</h6>
+                <h4>Harsh</h4>
+                <h6>S&M Team</h6>
               </div>
             </div>
             <div class="row member">
               <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/sid.jpg">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/umang.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>Siddharth Kumar Choudhary</h4>
-                <h6>Content Team</h6>
+                <h4>Umang Khaitan</h4>
+                <h6>S&M Team</h6>
               </div>
             </div>
             <div class="row member">
               <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/anand.jpg">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/lavanya.jpeg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>Anand Iyer</h4>
+                <h4>Lavanya Iyer</h4>
                 <h6>Content Team</h6>
               </div>
             </div>
