--- a/aboutus.html
+++ b/aboutus.html
@@ -338,9 +338,18 @@
               </div>
               <div class="col-sm-8 col-12 m-auto">
                 <h4>Lavanya Iyer</h4>
-                <h6>Content Team</h6>
+                <h6>S&M Team</h6>
               </div>
             </div>
+              <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/arkaprava.jpeg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Arkaprava Chakraborty</h4>
+                <h6>S&M Team</h6>
+          </div>
+         </div>
           </div>
         </div>
     </div>
