--- a/aboutus.html
+++ b/aboutus.html
@@ -246,6 +246,24 @@
                 <h6>Content Team</h6>
               </div>
             </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/sid.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Sidharth Kumar Choudhary</h4>
+                <h6>Content Team</h6>
+              </div>
+            </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/rakshika.jpeg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Rakshika Singh Rana</h4>
+                <h6>Content Team</h6>
+              </div>
+            </div>
           </div>
           <div class="col-sm-4 col-12">
             <div class="row member">
@@ -348,9 +366,18 @@
               <div class="col-sm-8 col-12 m-auto">
                 <h4>Arkaprava Chakraborty</h4>
                 <h6>S&M Team</h6>
-          </div>
+             </div>
          </div>
-          </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/sukrati.jpeg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Sukrati</h4>
+                <h6>S&M Team</h6>
+              </div>
+            </div>
+         </div>
         </div>
     </div>
 
