--- a/aboutus.html
+++ b/aboutus.html
@@ -246,8 +246,24 @@
                 <h6>Content Team</h6>
               </div>
             </div>
-            
-            
+             <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/anand.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Anand Iyer</h4>
+                <h6>Content Team</h6>
+              </div>
+            </div>
+            <div class="row member">
+              <div class="col-sm-4 col-12">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/anand.jpg">
+              </div>
+              <div class="col-sm-8 col-12 m-auto">
+                <h4>Anand Iyer</h4>
+                <h6>Content Team</h6>
+              </div>
+            </div>
           </div>
           <div class="col-sm-4 col-12">
             <div class="row member">
