--- a/aboutus.html
+++ b/aboutus.html
@@ -248,19 +248,19 @@
             </div>
              <div class="row member">
               <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/anand.jpg">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/sid.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>Anand Iyer</h4>
+                <h4>Siddharth Kumar Choudhary</h4>
                 <h6>Content Team</h6>
               </div>
             </div>
             <div class="row member">
               <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/anand.jpg">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/rakshika.jpeg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>Anand Iyer</h4>
+                <h4>Rakshika Singh Rana</h4>
                 <h6>Content Team</h6>
               </div>
             </div>
