--- a/aboutus.html
+++ b/aboutus.html
@@ -373,7 +373,7 @@
                 <img class="rounded-circle img-fluid" src="Assets/profiles/sukrati.jpeg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>Sukrati</h4>
+                <h4>Sukrati Madariya</h4>
                 <h6>S&M Team</h6>
               </div>
             </div>
