--- a/courses/french.html
+++ b/courses/french.html
@@ -194,7 +194,8 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Learn French from basics.</h2>
-                    <h6><p>Learn french live from our online course. Learn basic french conversations skills, vocabulary, grammar and much more. Learn the reason behind why the French are famous for their Renaissance as you study their culture and literature</p></h6>
+                    <h6><p>Learn the language of love and culture with our course. Study intricate and amazing traditions of the French and understand the renaissance and its impact on the world as you acquire fluency with the language.  
+                    </p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/frenchlogo.png">
