--- a/courses/german.html
+++ b/courses/german.html
@@ -192,7 +192,8 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Learn German from basics.</h2>
-                    <h6><p>Learn German live from our online course. Learn basic German conversations skills, vocabulary and grammar. Get well versed with the intricacies of German as you make it your next foreign language! </p></h6>
+                    <h6><p>Hallo Kumpels!! Have you ever wanted to have a German tutor at close proximity? With LearnYuva’s interactive live sessions establish confidence and learn as our faculty guides you on this path of learning German, all of this from the comfort of your home.
+                    </p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/germanLogo.jpg">
