--- a/courses/app.html
+++ b/courses/app.html
@@ -194,7 +194,8 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Android App-Development for Beginners</h2>
-                    <h6><p>Learn the art of creating Android Apps. live from our online course. Get the training you need, build a Github profile and learn a skill which is in high-demand in 21st century!</p></h6>
+                    <h6><p>Learn to create android apps effortlessly from our live online course. Train with us to become an amazing app developer, harness tools to help you become the best as you learn one of the most coveted skills of the industry.
+                    </p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/appLogo.jpg">
