--- a/courses/web.html
+++ b/courses/web.html
@@ -193,7 +193,8 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Web-Development for Beginners</h2>
-                    <h6><p>Learn the art of creating a website live from our online course. Get the training you need, build a Github profile and learn a skill which is in high-demand in 21st century! </p></h6>
+                    <h6><p>Have you ever looked at a website and wondered how it was created? Well, look no further than our course. Learn to design websites both beautiful and complex, sites that are easy to navigate and a joy to peruse. Learn this invaluable skill with our online classes and careful guidance.
+                    </p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/webLogo.png">
