--- a/courses/ios.html
+++ b/courses/ios.html
@@ -193,7 +193,8 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>iOS App-Development for Beginners</h2>
-                    <h6><p>Learn the art of building iOS apps. live from our online course. Get the training you need, build a Github profile and learn a skill which is in high-demand in 21st century!</p></h6>
+                    <h6><p>Are you passionate about the versions of iOS being released? We bring to you the opportunity to learn how to develop apps for iOS and contribute towards helping to build diversity in the app store.
+                    </p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/iosLogo.jpg">
