--- a/courses/c++.html
+++ b/courses/c++.html
@@ -192,7 +192,8 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Let's start coding in C++</h2>
-                    <h6><p>Learn C++ programming live from our online course. It's designed for beginners to make them professional programmers. The proper C++ certification is a gateway of a lucrative career. So Enroll Now!</p></h6>
+                    <h6><p>Ever wish you knew how to code? Don’t worry as our course will teach you how to code in C++ from scratch. Better yet to inculcate a deeper understanding of the world of coding through our live online classes.
+                    </p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/c++Logo.png">
