--- a/courses/python.html
+++ b/courses/python.html
@@ -192,7 +192,8 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Let's start coding in Python</h2>
-                    <h6><p>Learn python programming live from our online course. It's designed for beginners to make them professional programmers. The proper python certification is a gateway of a lucrative career. So Enroll Now!</p></h6>
+                    <h6><p>Want to learn the easiest method to interact with computers and learn their language? Commence this course on the 'glue' language to acquire your basic coding skills in the most interactive manner.
+                    </p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/pythonLogo.png">
