--- a/courses/java.html
+++ b/courses/java.html
@@ -192,7 +192,8 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Let's start coding in Java</h2>
-                    <h6><p>Learn Java programming live from our online course. It's designed for beginners to make them professional programmers. The proper Java certification is a gateway of a lucrative career. So Enroll Now!</p></h6>
+                    <h6><p>Feed the code to your techie soul. Make your journey through the land of computers with our course on the most versatile language and learn to communicate with computers fluently.
+                    </p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/javaLogo.png">
