--- a/courses/iot.html
+++ b/courses/iot.html
@@ -193,7 +193,7 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Step into the field of IoT.</h2>
-                    <h6><p>Learn how to create your own IoT device live from our online course. In this course you will be able to design, create & deploy your own IoT device using various platforms. So What are you waiting for? Join Now!</p></h6>
+                    <h6><p>Don’t miss out on the opportunity to build a secure, intelligent platform on the internet. Dive into the amazing world of IOT through our live sessions and understand how beautifully Internet Of Things brings everything together.</p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/iotLogo.jpg">
