--- a/courses/robotics.html
+++ b/courses/robotics.html
@@ -193,7 +193,8 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Step into the field of IoT.</h2>
-                    <h6><p> Always wanted to create your own Jarvis?  Learn how to make it live from our online course. And gain required knowledge and experience to build one for use in crisis management.</p></h6>
+                    <h6><p>Are you flabbergasted by a humanoid and want to build one but worried about where to start with? Fret no further as LearnYuva is one click apart from guiding you through engrossing lectures with interactive live sessions.
+                    </p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/roboticsLogo.jpg">
