--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
   <div class="container">
     <div class="heading">
-      <h1 class="text-center">What makes us Different?</h1>
+      <h1 class="text-center">Our Specialities</h1>
       <hr class="my-4">
     </div>
 
