Border Added to Dropdown, linked ContactUs page to every page.

--- a/courses/game.html
+++ b/courses/game.html
@@ -78,11 +78,7 @@
             <div class="menu">
               <div class="item">
                 LogIn
-                <div class="menu">
-                  <a class="courses item" href="#" id="stuLogin">Student Login</a>
-                  <a class="courses item" href="#" id="insLogin">Instructor Login</a>
-                  <a class="courses item" href="#" id="adminLogin">Admin Login</a>
-                </div>
+                
               </div>
               <div class="item">
                 SignUp
@@ -94,7 +90,7 @@
             </div>
           </div>
         <a class="nav-item nav-link nav-pills" href="../aboutus.html">About Us</a>
-        <a class="nav-item nav-link nav-pills" href="#">Contact Us</a>
+        <a class="nav-item nav-link nav-pills" href="../contactus.html">Contact Us</a>
       </div>
     </div>
   </nav>
