--- a/courses/french.html
+++ b/courses/french.html
@@ -76,23 +76,16 @@
             <div class="menu">
               <div class="item">
                 LogIn
-                <div class="menu">
-                  <a class="courses item" href="#" id="stuLogin">Student Login</a>
-                  <a class="courses item" href="#" id="insLogin">Instructor Login</a>
-                  <a class="courses item" href="#" id="adminLogin">Admin Login</a>
-                </div>
+                
               </div>
               <div class="item">
                 SignUp
-                <div class="menu">
-                  <a class="courses item" href="#" id="stuLogin">Student SignUp</a>
-                  <a class="courses item" href="#" id="insLogin">Instructor SignUp</a>
-                </div>
+                
               </div>
             </div>
           </div>
         <a class="nav-item nav-link nav-pills" href="../aboutus.html">About Us</a>
-        <a class="nav-item nav-link nav-pills" href="#">Contact Us</a>
+        <a class="nav-item nav-link nav-pills" href="../contactus.html">Contact Us</a>
       </div>
     </div>
   </nav>
