--- a/contactus.html
+++ b/contactus.html
@@ -181,6 +181,18 @@
 
     <!--Modals End-->
 
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-12 bg-danger">
+                <img class="course-icon w-50 mx-auto" src="Assets/Images/email.png">
+            </div>
+            <div class="col-sm-6 col-12 bg-danger">
+                <img class="course-icon w-50 text-center" src="Assets/Images/email.png">
+            </div>
+        </div>
+        </div>
+
+    </div>
 
     <div class="bottom-container">
         <div class="container my-auto">
