Contact Us page done.

--- a/contactus.html
+++ b/contactus.html
@@ -182,18 +182,47 @@
 
     <!--Modals End-->
 
-    <div class="container">
+    <div class="container" style="margin-bottom: 5%; margin-top: 5%; ">
         <div class="row">
-            <div class="col-sm-6 col-12 bg-danger">
-                <img class="course-icon w-50 mx-auto" src="Assets/Images/email.png">
+            <div class="contact-intro">
+                <h1 class="text-center" style="font-size: 100px;">
+                    hello.
+                </h1>
+                <p style="padding: 5%">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel vitae hic sunt? Impedit tempora atque placeat, esse omnis distinctio qui reiciendis adipisci magni beatae voluptas unde ducimus non, vel nisi!</p>
             </div>
-            <div class="col-sm-6 col-12 bg-danger">
-                <img class="course-icon w-50 text-center" src="Assets/Images/email.png">
+        </div>
+        <div class="row contact">
+            <div class="col-sm-2 col-0"></div>
+            <div class="col-sm-4 col-12" style="margin-top: 2% !important;">
+                <a  href="mailto:contact.learnyuva@gmail.com"><img class="course-icon w-50  mx-auto d-block" src="Assets/Images/logo.png"></a>
+                <h5 class="text-center">Send a mail to us here</h5>
+            </div>
+            <div class="col-sm-4 col-12" style="margin-top: 2% !important;">
+                <a href="https://forms.gle/cCxEQ8D6NJc9Rxh6A"><img class="course-icon mx-auto d-block w-50" src="Assets/Images/chat-box.png"></a>
+                <h5 class="text-center">Want to give us a feedback ?</h5>
+            </div>
+            <div class="col-sm-2 col-0"></div>
+        </div>
+        <hr class="my-4">
+        <div class="row" style="margin-top: 50px;">
+            <div class="col-12">
+                <h5 class="text-center">Join us on our Social Platforms and build a community</h5>
+            </div>
+            <div class="col-sm-4 col-12" style="margin-top: 2% !important;">
+                <a href="https://www.facebook.com/learnyuva"><img class="course-icon w-50 mx-auto d-block" src="Assets/Images/circular-facebook.png" ></a>
+                <h5 class="text-center">Like us on Facebook</h5>
+            </div>
+            <div class="col-sm-4 col-12" style="margin-top: 2% !important;">
+                <a class="footer-link" href="https://www.linkedin.com/company/learnyuva/"><img class="course-icon w-50 mx-auto d-block" src="Assets/Images/circular-linkedin.png" ></a>
+                <h5 class="text-center">Connect with us on our linkedIn
+                </h5>
+            </div>
+            <div class="col-sm-4 col-12" style="margin-top: 2% !important;">
+                <a href="https://www.instagram.com/learnyuva"><img class="course-icon w-50 mx-auto d-block" src="Assets/Images/instagram.png" ></a>
+                <h5 class="text-center">Follow us on Instagram</h5>
             </div>
         </div>
         </div>
-
-    </div>
 
     <div class="bottom-container">
         <div class="container my-auto">
