--- a/contactus.html
+++ b/contactus.html
@@ -19,7 +19,7 @@
 <body>
   <!--navbar-->
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand h1" href="#">
+    <a class="navbar-brand h1" href="index.html">
       <div class="logo">
         <img src="Assets/Images/logoWhite.png" height="60px" width="47px">
         <img src="Assets/Images/textWhite.png" height="40px" width="116px" class="my-auto">
@@ -30,7 +30,7 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="newsMenu">
       <div class="navbar-nav">
-        <a class="nav-item nav-link nav-pills" href="index.html">Home</a>
+        <a class="nav-item nav-link nav-pills" href="#">Home</a>
 
         <div class="ui dropdown">
           <a class="nav-item nav-link nav-pills dropdown-toggle" href="#">Courses</a>
