--- a/contactus.html
+++ b/contactus.html
@@ -186,7 +186,7 @@
                 <h1 class="text-center" style="font-size: 100px;">
                     hello.
                 </h1>
-                <p style="padding: 5%">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel vitae hic sunt? Impedit tempora atque placeat, esse omnis distinctio qui reiciendis adipisci magni beatae voluptas unde ducimus non, vel nisi!</p>
+                <p style="padding: 5%">Wish to learn more about us or have any query? Contact us at any of the below platforms using the links provided. It would be our privilege to help you to the best of our abilities.</p>
             </div>
         </div>
         <div class="row contact">
