--- a/index.html
+++ b/index.html
@@ -261,6 +261,8 @@
           <p class="text-left">
             Eliminate the concern of communication barrier in any foreign country by learning to speak various languages with ease.
           </p>
+            <br>
+          <button type="button" class="btn btn-outline-primary">View Courses</button>
         </div>
       </div>
 
@@ -274,6 +276,8 @@
           <p class="text-left">
               Take a step towards advancement by acquiring the skills of Web Development, App Development and iOS Development and learn the languages of computers to be industry ready.
           </p>
+            <br>
+          <button type="button" class="btn btn-outline-primary">View Courses</button>
         </div>
       </div>
       <hr class="divider">
@@ -286,6 +290,8 @@
           <p class="text-left">
              Familiarize yourself with concept of Internet of Things, Robotics, Drone Making etc. which will help you embark on your journey towards triumph.
           </p>
+            <br>
+          <button type="button" class="btn btn-outline-primary">View Courses</button>
         </div>
       </div>
       <hr class="divider">
@@ -298,6 +304,8 @@
           <p class="text-left">
          Understanding the marketing strategies and a spectrum of tactics that fall under umbrella of Digital Marketing.
           </p>
+            <br>
+          <button type="button" class="btn btn-outline-primary">View Courses</button>
         </div>
       </div>
     </div>
