--- a/courses/app.html
+++ b/courses/app.html
@@ -198,6 +198,11 @@
         </div>
     </div>
 
+    <div class="text-center">
+      <h2>We are Launching Soon!</h2>
+      <h6>Your favourite course is under construction it will go live soon </h6>
+    </div>
+    
     <hr class="my-4 divider">
     <div class="container">
         <div class="row">
