--- a/courses/c++.html
+++ b/courses/c++.html
@@ -188,6 +188,8 @@
                     <h2>Let's start coding in C++</h2>
                     <h6><p>Ever wish you knew how to code? Don’t worry as our course will teach you how to code in C++ from scratch. Better yet to inculcate a deeper understanding of the world of coding through our live online classes.
                     </p></h6>
+                  <br>
+                    <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/c++Logo.png">
