--- a/courses/dm.html
+++ b/courses/dm.html
@@ -189,6 +189,8 @@
                     <h2>Enhance your skills in Digital Marketing.</h2>
                     <h6><p>With the right use of internet, you will now be able to expand your horizon and gain new exposure for your business. Learn tactics to help widen your customer base with ease and come out ahead in this competitive world.
                     </p></h6>
+                  <br>
+                    <button type="button" class="btn btn-primary btn-lg">Enroll Now</button>
                 </div>
                 <div class="col-sm-6 col-12">
                     <img class="course-icon" src="../Assets/Images/dmLogo.jpg">
